--- a/ansible/winlab.yml
+++ b/ansible/winlab.yml
@@ -1,8 +1,14 @@
 ---
-- name: Ping 
+- name: ping and update 
   hosts: all 
 
   tasks:
   - name: ping
     win_ping:
     
+  - name: Install all security updates with automatic reboots
+    ansible.windows.win_updates:
+    category_names:
+    - SecurityUpdates
+    reboot: yes
+    log_path: C:\ansible_wu.txt
