--- a/ansible/winlab.yml
+++ b/ansible/winlab.yml
@@ -5,7 +5,8 @@
   tasks:
   - name: ping
     win_ping:
-    
+
+  tasks:
   - name: Install all security updates with automatic reboots
     ansible.windows.win_updates:
     category_names:
