--- a/ansible/winlab.yml
+++ b/ansible/winlab.yml
@@ -1,9 +1,10 @@
 ---
-hosts: all 
+- name: Atualizacao do Windows
+  hosts: all 
 
-- name: Install all security updates with automatic reboots
-  ansible.windows.win_updates:
-  category_names:
-  - SecurityUpdates
-  reboot: yes
-  log_path: C:\ansible_wu.txt
+  - name: Install all security updates with automatic reboots
+    ansible.windows.win_updates:
+    category_names:
+    - SecurityUpdates
+    reboot: yes
+    log_path: C:\ansible_wu.txt
