--- a/ansible/winlab.yml
+++ b/ansible/winlab.yml
@@ -1,16 +1,50 @@
 ---
-- name: Atualizacao do Windows
-  hosts: all 
 
-  tasks:
+- name: "Install Windows updates."
+  win_updates:
+    category_names: "{{ win_updates_category_names }}"
+  register: win_updates_result
+  failed_when:
+    - win_updates_result.failed is defined
+    - win_updates_result.failed
+    - not win_updates_reboot
 
-  - name: Install all security updates with automatic reboots
-    ansible.windows.win_updates:
-      category_names:
-          - SecurityUpdates
-          - CriticalUpdates
-          - UpdateRollups
-          - DefinitionUpdates
-          - Updates
-      reboot: yes
-      log_path: C:\ansible_wu.txt
+- block:
+  # Attempting some error handling.
+  - name: "Reboot Windows to re-try update installation."
+    win_reboot:
+      shutdown_timeout_sec: 3600
+      reboot_timeout_sec: 3600
+    when:
+      - win_updates_result.error is defined
+      - win_updates_result.error == "A reboot is required before more updates can be installed."
+
+    # Let it fail this time if reboot didn't work.
+  - name: "Install Windows updates again."
+    win_updates:
+      category_names: "{{ win_updates_category_names }}"
+    register: win_updates_result
+
+  when:
+    - win_updates_reboot
+    - win_updates_result.failed is defined
+    - win_updates_result.failed
+
+- name: "Reboot when updates installed."
+  win_reboot:
+    shutdown_timeout_sec: 3600
+    reboot_timeout_sec: 3600
+  when:
+    - win_updates_result.reboot_required is defined
+    - win_updates_result.reboot_required
+  register: reboot_status
+
+- debug:
+    msg: |
+      {{ win_updates_result.installed_update_count }} updates were installed on {{ inventory_hostname }}.
+      The updates installed were:
+      {% for key, value in win_updates_result.updates.iteritems() %}
+        - {{ value.title }}
+      {% endfor %}
+      {{ win_updates_result.failed_update_count }} updates failed to install.
+      It took {{ reboot_status.elapsed / 60 }} minutes for the machine to reboot.
