--- a/ansible/winlab.yml
+++ b/ansible/winlab.yml
@@ -6,7 +6,12 @@
 
   - name: "Install Windows updates."
     ansible.windows.win_updates:
-      category_names: "{{ win_updates_category_names }}"
+      category_names: 
+        - SecurityUpdates
+        - CriticalUpdates
+        - UpdateRollups
+        - DefinitionUpdates
+        - Updates
     register: win_updates_result
     failed_when:
       - win_updates_result.failed is defined
