--- a/.github/workflows/do_something.yml
+++ b/.github/workflows/do_something.yml
@@ -1,6 +1,8 @@
 name: Do Something That Needs Scheduled
 
 on:
+  repository_dispatch:
+    types: do-something
   schedule:
     - cron:  '*/5 * * * *'
 
