--- a/.github/workflows/do_something.yml
+++ b/.github/workflows/do_something.yml
@@ -2,7 +2,7 @@ name: Do Something That Needs Scheduled
 
 on:
   repository_dispatch:
-    types: do-something
+    application: mhs
 #  schedule:
 #    - cron:  '*/5 * * * *'
 
